package com.example.mkv_watch.model;

public interface Observer {
    void update (Subject subject);
}
