@startuml

title __MKV_WATCH's Class Diagram__\n

  namespace  {
    namespace om.example.mkv_watch {
      class com.example.mkv_watch.HelloApplication {
      }
    }
  }
  

  namespace  {
    namespace om.example.mkv_watch {
      class com.example.mkv_watch.HelloController {
      }
    }
  }
  

  namespace  {
    namespace om.example.mkv_watch {
      namespace model {
        class com.example.mkv_watch.model.Colors {
        }
      }
    }
  }
  

  namespace  {
    namespace om.example.mkv_watch {
      namespace model {
        class com.example.mkv_watch.model.ComponentOne {
        }
      }
    }
  }
  

  namespace  {
    namespace om.example.mkv_watch {
      namespace model {
        class com.example.mkv_watch.model.ComponentThree {
        }
      }
    }
  }
  

  namespace  {
    namespace om.example.mkv_watch {
      namespace model {
        class com.example.mkv_watch.model.ComponentTwo {
        }
      }
    }
  }
  

  namespace  {
    namespace om.example.mkv_watch {
      namespace model {
        class com.example.mkv_watch.model.ConcreteObserver {
        }
      }
    }
  }
  

  namespace  {
    namespace om.example.mkv_watch {
      namespace model {
        class com.example.mkv_watch.model.ConcreteSubject {
        }
      }
    }
  }
  

  namespace  {
    namespace om.example.mkv_watch {
      namespace model {
        interface com.example.mkv_watch.model.Observer {
        }
      }
    }
  }
  

  namespace  {
    namespace om.example.mkv_watch {
      namespace model {
        interface com.example.mkv_watch.model.Subject {
        }
      }
    }
  }
  

  namespace  {
    namespace om.example.mkv_watch {
      namespace model {
        class com.example.mkv_watch.model.TimeServer {
        }
      }
    }
  }
  

  com.example.mkv_watch.HelloApplication -up-|> javafx.application.Application
  com.example.mkv_watch.HelloController .up.|> javafx.fxml.Initializable
  com.example.mkv_watch.HelloController o-- com.example.mkv_watch.model.ComponentOne : componentOne1
  com.example.mkv_watch.HelloController o-- com.example.mkv_watch.model.ComponentThree : componentThree3
  com.example.mkv_watch.HelloController o-- com.example.mkv_watch.model.ComponentTwo : componentTwo2
  com.example.mkv_watch.HelloController o-- com.example.mkv_watch.model.TimeServer : timer
  com.example.mkv_watch.HelloController o-- com.example.mkv_watch.model.ConcreteSubject : subject
  com.example.mkv_watch.model.ComponentOne .up.|> com.example.mkv_watch.model.Observer
  com.example.mkv_watch.model.ComponentOne o-- com.example.mkv_watch.model.Colors : colors
  com.example.mkv_watch.model.ComponentThree .up.|> com.example.mkv_watch.model.Observer
  com.example.mkv_watch.model.ComponentTwo .up.|> com.example.mkv_watch.model.Observer
  com.example.mkv_watch.model.ConcreteObserver .up.|> com.example.mkv_watch.model.Observer
  com.example.mkv_watch.model.ConcreteSubject .up.|> com.example.mkv_watch.model.Subject
  com.example.mkv_watch.model.TimeServer .up.|> com.example.mkv_watch.model.Subject


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
